nginx-dep-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"nginx-dep"},"name":"nginx-dep","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"nginx-dep"}},"template":{"metadata":{"labels":{"app":"nginx-dep"}},"spec":{"containers":[{"image":"nginx:1.16","name":"nginx-dep","ports":[{"containerPort":8080}],"resources":{"limits":{"cpu":"500m","memory":"128Mi"}}}]}}}}
  creationTimestamp: "2021-07-10T13:29:04Z"
  generation: 1
  labels:
    app: nginx-dep
  name: nginx-dep
  namespace: default
  resourceVersion: "106340"
  uid: bd8b63ee-c174-4b33-b900-75e8ae1b7686
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-dep
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-dep
    spec:
      containers:
      - image: nginx:1.16
        imagePullPolicy: IfNotPresent
        name: nginx-dep
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2021-07-10T13:29:10Z"
    lastUpdateTime: "2021-07-10T13:29:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-07-10T13:29:04Z"
    lastUpdateTime: "2021-07-10T13:29:10Z"
    message: ReplicaSet "nginx-dep-5f7b498d8c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
